nginxplus/nascop-nginxplus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  clusterIP: None
  ports:
    - name: nginx
      port: 80
  selector:
      name: nginxplus-pod
      app: nascop
