nginxplus/nascop-nginxplus-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nginx-ingress
  namespace: nascop
spec:
  rules:
    - host: api.nascop.org
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
    - host: eiddash.nascop.org
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
    - host: partnerperformance.org
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
    # This section is only required if TLS is to be enabled for the Ingress
